--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,20 @@ nav ul a:hover::after{
     width: 100%;
 }
 
+/*Menu Mobile*/
+nav .menu-icon{
+    cursor: pointer;
+    color: white;
+    font-size: 25px;
+    display: none;
+}
+
+nav .close-icon{
+    display: none;
+    font-size: 30px;
+    color: white;
+}
+
 .banner{
     display: flex;
     justify-content: center;
@@ -179,15 +193,18 @@ nav ul a:hover::after{
     font-weight: 600;
     font-size: 20px;
     margin-top: 15px;
+    transition: 0.2s;
 }
 .depoimentos .card-item .depoimento-user{
     font-size: 15px;
     padding: 0 15px;
+    transition: 0.2s;
 }
 
 .depoimentos .card-item .estrelas{
     margin: 15px 0;
     border-top: 2px solid #71767a23;
+    transition: 0.2s;
 }
 
 .depoimentos .card-item .estrelas i{
@@ -207,4 +224,70 @@ nav ul a:hover::after{
 .depoimentos .card-item:hover .estrelas i{
     color: #d3e6fd;
 }
+/*Clientes*/
 
+.clientes h3,
+.clientes p{
+    text-align: center;
+}
+
+.clientes .container div{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.footer{
+    background-color: #4f9cf9;
+    text-align: center;
+}
+
+.footer i{
+    color: #4f9cf9;
+    font-size: 19px;
+    background-color: white;
+    padding: 10px;
+    margin: 3px;
+    border-radius: 10px;
+}
+
+.footer p{
+    margin-top: 10px;
+    color: white;
+}
+
+@media(max-width: 830px){
+    .ul{
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: #184b88;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        clip-path: circle(0% at 100% 0);
+        transition: 0.7s;
+        cursor: pointer;
+    }
+    .ul.open{
+        clip-path: circle(141.2% at 100% 0);
+    }
+    .ul a{
+        margin: 10px 0;
+        font-size: 16px;
+    }
+    nav .menu-icon{
+    display: block;
+   }
+   nav .close-icon{
+    display: block;
+    position: absolute;
+    top: 46px;
+    right: 28px;
+   }
+}
+
+/*propriedade Clip-path*/
